2003-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: <ft2build.h> is an optional prerequisite for
	<freetype/freetype.h> and <libwmf/ipa.h> so include it when
	testing for these headers.
	* magick/annotate.c: Include <ft2build.h> if it is available.

2003-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/wandtest.c: Ported from latest ImageMagick version.
	* wand/drawing_wand.c: Adapted to be compatible with latest
	ImageMagick version.
	* wand/pixel_wand.c: Adapted to be compatible with latest
	ImageMagick version.
	* wand/magick_wand.c: Ported from latest ImageMagick version.
	* magick/image.h (Image): Members color_profile, iptc_profile,
	generic_profile, and generic_profiles are now deprecated and
	private although they continue to work as before. Please migrate
	existing code to use the GetImageProfile and SetImageProfile
	functions since these members will eventually be removed.
	* magick/image.c (GetImageProfile): New function to retrieve an
	image profile. Return value differs from similarly named
	ImageMagick method since the ImageMagick approach assumes a
	particular storage method.
	(SetImageProfile): New function to add (or remove) an image
	profile. Does not execute CMS color profiles.
	* magick/cache.c (SetImageVirtualPixelMethod): Return unsigned int to
	make the Wand implementation happy.
	* magick/image.c (TransformColorspace): Return unsigned int to
	make the Wand implementation happy.
	(SetImageType): Return unsigned int to make the Wand
	implementation happy.
	* magick/draw.h, magick/draw.c: Substitute 'unsigned long' in
	place of 'size_t' in interfaces so that the draw API is not
	sensitive to the definition of _LP64.
	* locale/C.mgk: Added new messages required by Wand library.
	* magick/error.c (ExceptionSeverityToTag): Add tag translations
	for the WandWarning, WandError, & WandFatalError enumerations
	* magick/error.h (enum ExceptionType): Add WandWarning, WandError,