@@ -51,18 +51,39 @@
 #include "magick/utility.h"
 #include "magick/xwindow.h"
 #if defined(HasTTF)
+
 #if defined(__MINGW32__)
 #  undef interface  /* Remove interface define */
 #endif
+
 #if defined(HAVE_FT2BUILD_H)
-   /* Some libwmf/FreeType installs are broken in that the FreeType
-     headers don't work without including <ft2build.h> first */
+  /*
+    Modern libwmf2 installs may require that <ft2build.h> be included
+    before including other libwmf headers.  Including <ft2build.h>
+    establishes definitions used by other FreeType headers.
+  */
 #  include <ft2build.h>
 #endif /* defined(HAVE_FT2BUILD_H) */
-#include <freetype/freetype.h>
-#include <freetype/ftglyph.h>
-#include <freetype/ftoutln.h>
-#endif
+
+#if defined(FT_FREETYPE_H)
+#  include FT_FREETYPE_H
+#else
+#  include <freetype/freetype.h>
+#endif /* defined(FT_FREETYPE_H) */
+
+#if defined(FT_GLYPH_H)
+#  include FT_GLYPH_H
+#else
+#  include <freetype/ftglyph.h>
+#endif /* defined(FT_GLYPH_H) */
+
+#if defined(FT_OUTLINE_H)
+#  include FT_OUTLINE_H
+#else
+#  include <freetype/ftoutln.h>
+#endif /* defined(FT_OUTLINE_H) */
+
+#endif /* defined(HasTTF) */
 
 /*
   Forward declarations.
